kubernetes/auto-trade-front.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auto-trade-front
spec:
  type: 'NodePort'
  selector:
    app: auto-trade-front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
