kubernetes/auto-trade-front.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-trade-front
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    cert-manager.io/cluster-issuer: 'letsencrypt'
spec:
  tls:
    - hosts:
      - s6nfront.duckdns.org
      secretName: auto-trade-front-tls
  rules:
    - host: s6nfront.duckdns.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: auto-trade-front
              port:
                number: 3000
